# hello_rocket

./: Cargo.toml  Rocket.toml
migrations/: 20230116135713_create_users.sql
src/: main.rs
