[package]
name = "hello_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0.152"
sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls"] }
uuid = { version = "1.2.2", features = ["v4"] }
